--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -128,6 +128,14 @@ fastdfs.http_secret_key = FastDFS1234567890
 fastdfs.http_tracker_http_port = 8080
 fastdfs.tracker_servers = preektracker.inc.eakay.cn:22122
 
+
+# Elasticsearch
+# 9200端口是用来让HTTP REST API来访问ElasticSearch，而9300端口是传输层监听的默认端口
+elasticsearch.ip=127.0.0.1
+elasticsearch.port=9300
+elasticsearch.pool=5
+elasticsearch.cluster.name=elasticsearch
+
 # 自定义属性
 
 # activemq
