--- a/pom.xml
+++ b/pom.xml
@@ -177,10 +177,17 @@
 			<version>1.2.39</version>
 		</dependency>
 
+		<!-- commons-lang3 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>1.3.1.RELEASE</version>
 		</dependency>
 
 	</dependencies>
