--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -136,6 +136,17 @@ elasticsearch.port=9300
 elasticsearch.pool=5
 elasticsearch.cluster.name=elasticsearch
 
+# kafka
+# 集群配置
+# spring.kafka.bootstrap-servers=192.168.1.107:9092,192.168.1.108:9092,192.168.1.109:9092
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=myGroup
+# spring.kafka.consumer.auto-offset-reset=none
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
 # 自定义属性
 
 # activemq
