--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -117,9 +117,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/chy
 #集群
 #spring.data.mongodb.uri=mongodb://preekdb.mongo9090.shard.eakay.cn:30000,preekdb.mongo9083.shard.eakay.cn:30000,preekdb.mongo9093.shard.eakay.cn:30000/charge-test
 
-
 ## fastdfs-client.properties
-
 fastdfs.connect_timeout_in_seconds = 10
 fastdfs.network_timeout_in_seconds = 30
 fastdfs.charset = UTF-8
@@ -127,7 +125,6 @@ fastdfs.http_anti_steal_token = false
 fastdfs.http_secret_key = FastDFS1234567890
 fastdfs.http_tracker_http_port = 8080
 fastdfs.tracker_servers = preektracker.inc.eakay.cn:22122
-
 
 # Elasticsearch
 # 9200端口是用来让HTTP REST API来访问ElasticSearch，而9300端口是传输层监听的默认端口
@@ -146,6 +143,10 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+#hbase
+hbase.zookeeper.quorum=localhost
+hbase.zookeeper.port=2181
 
 # 自定义属性
 
