--- a/pom.xml
+++ b/pom.xml
@@ -184,10 +184,25 @@
 			<version>3.4</version>
 		</dependency>
 
+		<!-- kafka -->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 			<version>1.3.1.RELEASE</version>
+		</dependency>
+
+		<!-- hhbase-client -->
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-client</artifactId>
+			<version>1.2.6</version>
+		</dependency>
+
+		<!-- spring-data-hadoop -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-hadoop</artifactId>
+			<version>2.5.0.RELEASE</version>
 		</dependency>
 
 	</dependencies>
