--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -133,6 +133,11 @@ elasticsearch.port=9300
 elasticsearch.pool=5
 elasticsearch.cluster.name=elasticsearch
 
+#elasticsearch.ip=10.30.90.92
+#elasticsearch.port=9300
+#elasticsearch.pool=5
+#elasticsearch.cluster.name=wutesteklogs
+
 # kafka
 # ºØ»∫≈‰÷√
 # spring.kafka.bootstrap-servers=192.168.1.107:9092,192.168.1.108:9092,192.168.1.109:9092
