--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,14 +23,14 @@ spring.http.encoding.enabled=true
 #配置服务器端口，默认为8080
 server.port=8080
 #用户回话session过期时间，以秒为单位
-server.session-timeout=3600
+server.session.timeout=3600
 #配置访问路径，默认为/
 server.context-path=/
 #配置Tomcat编码，默认为UTF-8
 server.tomcat.uri-encoding=UTF-8
 #Tomcat是否开启压缩，默认为关闭
-server.tomcat.compression=on
-
+#server.tomcat.compression=on
+server.compression.enabled=true
 
 #默认支持文件上传
 spring.http.multipart.enabled =true
@@ -52,17 +52,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spboot?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=wmzycn
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.max-active=20
-spring.datasource.max-idle=10
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
-spring.datasource.max-wait=10000
-spring.datasource.validation-query=SELECT 1
-spring.datasource.test-on-borrow=false
-spring.datasource.test-while-idle=true
-spring.datasource.time-between-eviction-runs-millis=18800
+spring.datasource.tomcat.max-active=20
+spring.datasource.tomcat.max-idle=10
+spring.datasource.tomcat.min-idle=5
+spring.datasource.tomcat.initial-size=5
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.validation-query=SELECT 1
+spring.datasource.tomcat.test-on-borrow=false
+spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.time-between-eviction-runs-millis=18800
 # 过滤器，并设置了延迟时间为0 框架自动将大于该时间的数据查询进行警告输出
-spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=100)
+spring.datasource.tomcat.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=100)
 
 
 # REDIS (RedisProperties)
@@ -143,7 +143,6 @@ elasticsearch.cluster.name=elasticsearch
 # spring.kafka.bootstrap-servers=192.168.1.107:9092,192.168.1.108:9092,192.168.1.109:9092
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=myGroup
-# spring.kafka.consumer.auto-offset-reset=none
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
